# similar-project-rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migration/: Cargo.toml
migration/src/: lib.rs  m20250224_000001_create_structures_tables.rs  m20251023_070251_create_project_table.rs  m20251028_074726_add_room_count_column_at_floor_structure.rs  m20251101_000001_remove_bounding_box_aspect_ri.rs  m20251102_000001_rename_bounding_box_height_to_depth.rs  m20251102_000002_rename_structure_tables.rs
src/: config.rs  error.rs  main.rs  models.rs  repositories.rs  routes.rs  state.rs  utils.rs
src/handlers/: mod.rs  project_handler.rs
src/models/: image.rs  mod.rs  project.rs
src/models/common/: currency.rs  mod.rs  transformation.rs
src/models/material/: mod.rs  types.rs
src/models/project/: enums.rs  mod.rs  project.rs  response.rs  structure.rs
src/models/project/child/: floorplan.rs  from_map.rs  mod.rs  portfolio.rs  structure.rs
src/models/project/child/floorplan/: floorplan.rs  mod.rs
src/models/project/child/structure/: bounding_box.rs
src/models/project/structure/: floor_structure.rs  room_structure.rs
src/repositories/: floor_structure_repository.rs  image_repository.rs  project_repository.rs  room_structure_repository.rs
src/routes/: mod.rs  project.rs  project_routes.rs
src/routes/project/: dto.rs  project_router.rs
src/routes/project/dto/: response.rs
src/utils/: image.rs  serde.rs
