[workspace]
members = ["migration"]
resolver = "2"

[package]
name = "similar-project"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "signal", "net", "time", "fs", "sync"] }
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-uuid", "with-chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
thiserror = "2.0.17"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
bson = { version = "2.9.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
reqwest = { version = "0.12.5", features = ["json", "rustls-tls"] }
aws-config = "1.3.0"
aws-sdk-s3 = { version = "1.3.0", default-features = false, features = ["rustls"] }
aws-types = "1.3.0"
migration = { path = "migration" }
tower-http = { version = "0.6.2", features = ["cors"] }
